# languages

./: .gitignore  .gitmodules  README.md  languages.code-workspace  return_struct.c  xmake.lua
cpp/: .gitignore
cpp/filter/: filter.h
cpp/leetcode/: 468.cc
cpp/src/: move.cc  pass_env_to_child.c  pipe-fork-stderr.cc  return_struct.c  rvalue.cc  sptr.cc  template.cc
golang/: .gitignore  go.mod  net.go
golang/yaml/: main.go
include/filter/: filter.h
javascript/: .gitignore  README.md  helloworld  run  run.ts  say
leetcode/: 468.cc
python/: .gitignore  README.md  example.py  file.py  main.py  pyproject.toml  req.py
rust/: .gitignore  Cargo.toml  config.yaml
rust/config/: include.kdl  nginx.kdl
rust/core/: Cargo.toml
rust/typing/: Cargo.toml
src/: char_array_to_int.cc  connect.c  inheritance.cc  main.c  main.cc  move.cc  pass_env_to_child.c  queue.cc  return_struct.c  rvalue.cc  smartptr.cc  sptr.cc  variant.cc
