
[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
future-utils = "0.12.1"
futures = "0.3.30"
libc = "0.2.155"
openssl = "0.10.64"
reqwest = { version = "0.12.5", features = ["json"] }
rustls-pemfile = "2.1.2"
serde = { version = "1.0.204", features = ["derive"] }
serde_yaml = "0.9.34"
socket2 = "0.5.7"
tokio = { version = "1.38.0", features = ["full"] }
